# Bicycles

./: .gitignore  CMakeLists.txt  README.md
Bicycles_lib/: CMakeLists.txt
Bicycles_lib/src/Allocators/: trackingAllocator.hpp
Bicycles_lib/src/Data Structures/: basic_string.c  basic_string.h  simpleVector.hpp  stack.c  stack.h  templateSTLContainer.hpp
Bicycles_lib/src/SmartPointers/: SPointer.hpp  UPointer.hpp
Bicycles_lib/src/TestData/: testStruct.hpp
google tests/: CMakeLists.txt
google tests/Tests/: test.cpp
src/: main.cpp
